<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">M Coaching</string>
    <string name="action_settings">Settings</string>
    
    <string name="image">Thumbnail</string>
    <string name="course_name">Sri Vidya</string>
    
     
     <string name="course_title"> online course - Basic Level</string>
     <string name="featured_stories">Featured Stories</string>
     <string name="lesson_title">Message from Guruji</string>
     <string name="course_subTitle">Worship of Shakti</string>
	<string name="launch_course">Launch Course</string>
     
  <string name="channels">Channels</string>
  <string name="browse">Browse Lesson</string>
  <string name="share">Share</string>
  <string name="donate">Donate</string>
  <string name="announcements">Announcements</string>
    <string name="logs">Logs</string>
  <string name="num_channels">5</string>
  <string name="login_button">Login</string>
  <string name="register_button">Register</string>
  <string name="register_new_button">New User? Register</string>
  <string name="share_button">Share</string>
  <string name="donate_button">Donate</string>
  <string name="classmates_button">Classmates</string>
  <string name="progress_button">How am I doing</string>
  <string name="placeholder">This is a placeholder</string>
  <string name="dialog_message">You have to complete Lesson# %1$d to take Lesson# %2$d</string>
  <string name="dialog_title">Alert</string>
  <string name="ok">OK</string>
     <string name="dialog_cl_message">You have now enrolled for the course. You will get notification for your first lesson in less than a minute.</string>
  <string name="dialog_cl_title">Congratulations !</string>
  <string name="got_it">Got It!</string>
    <string name="course_launch_heading">Course Launch</string>
   <string name="Course_value_question"><b>What do I learn?</b></string>
   <string name="Course_value_answer">Realize who you are through worship of Shakti</string>
   <string name="Course_demands_question">What does it take to learn?</string>
   <string name="Course_instructions_question">How is it taught?</string>
   <string name="Course_demands_answer">Typically it takes not more than 30 mins/day for 3 weeks to gain through this course.</string>
   <string name="Course_instructions_answer">Video and audio lectures featuring your Guruji will be delivered to your app. Auxiliary reading material will be provided.</string>
   <string name="subscribe_button">Okay! Subscribe</string>     
    <string name="notify_title">Primer</string> 
    <string name="notify_text">Lesson #1 of %1$s course is downloaded for you. Click here to take your lesson.</string>  
    <string name="previous">Previous</string>  
    <string name="next">Next</string>    
    
    <string name="net_down_dialog_title">Alert</string> 
    <string name="net_down_dialog_content">It seems internet is not available. Please enable it and try again.</string> 
    <string name="net_down_dialog_confirm">OK!</string>  
     <string name="configure">Configure</string>  
     <string name="pref_app_settings">App Configuration</string>
      <string name="pref_app_name">App Name</string>
	<string name="pref_app_name_summary">click to set the app name</string>
      <string name="pref_course_name">Course Name</string>
      <string name="pref_course_name_summary">click to set the course name</string>
      <string name="pref_course_subtitle">Course Subtitle</string>
      <string name="pref_course_subtitle_summary">click to set the course subtitle</string>
     
</resources>
