<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:yourapp="http://schemas.android.com/apk/res-auto">
    
     <item android:id="@+id/menu_item_search"
    android:icon="@drawable/browse_lesson"
    android:title="@string/browse"
    android:showAsAction="ifRoom|withText"
    />
     
      <item android:id="@+id/menu_item_announcements"
    android:icon="@drawable/announcements"
    android:title="@string/announcements"
    android:showAsAction="ifRoom|withText"
    />
     
    <item android:id="@+id/menu_item_channels"
    android:icon="@drawable/channels"
    android:title="@string/channels"
    android:showAsAction="ifRoom|withText"/>
    
   
    
    <item android:id="@+id/menu_item_logs"
    android:icon="@android:drawable/ic_menu_info_details"
    android:title="@string/logs"
    android:showAsAction="never"/>

</menu>
