<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:layout_marginLeft="0dip"
    android:layout_marginTop="0dip"
    tools:context=".CourseLaunchActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:weightSum="13" >

        <TextView
            android:id="@+id/CourseLaunchHeaderText"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/sub_header_bg"
            android:gravity="center"
            android:text="@string/course_launch_heading" 
             android:textSize="16sp">
        </TextView>

        <TextView
            android:id="@+id/CourseTitle"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/course_launch_bg"
            android:gravity="center"
           
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="5.5"
            android:orientation="horizontal"
            android:weightSum="7" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/course_launch_bg"
                android:text="" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5.00"
                android:orientation="vertical"
                android:weightSum="12" >

                <TextView
                    android:id="@+id/CourseValueQuestion"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/course_launch_bg"
                    android:text="@string/Course_value_question"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/CourseValueAnswer"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/course_launch_bg"
                    android:text="@string/Course_value_answer"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/course_launch_bg"
                    android:text="" />

                <TextView
                    android:id="@+id/CourseDemandsQuestion"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/course_launch_bg"
                    android:text="@string/Course_demands_question"
                    android:textSize="16sp" />

                <ScrollView
                    android:id="@+id/CourseDemandsAnswerContainter"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2" >

                    <TextView
                        android:id="@+id/CourseDemandsAnswer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/course_launch_bg"
                        android:text="@string/Course_demands_answer"
                        android:textSize="16sp" />
                </ScrollView>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/course_launch_bg"
                    android:text="" />

                <TextView
                    android:id="@+id/CourseInstructionsQuestion"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/course_launch_bg"
                    android:text="@string/Course_instructions_question"
                    android:textSize="16sp" />

                <ScrollView
                    android:id="@+id/CourseInstructionsAnswerContainer"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="4" >

                    <TextView
                        android:id="@+id/CourseInstructionsAnswer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/course_launch_bg"
                        android:text="@string/Course_instructions_answer"
                        android:textSize="16sp" />
                </ScrollView>
            </LinearLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/course_launch_bg"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.75"
            android:orientation="horizontal"
            android:weightSum="8" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="2.5"
                android:background="@drawable/course_launch_bg"
                android:text="" />

            <Button
                android:id="@+id/submitButton"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="3"
                android:background="@drawable/okay_subscribe_btn_bg"
                android:gravity="center"
                android:text="@string/subscribe_button"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="2.5"
                android:background="@drawable/course_launch_bg"
                android:text="" />
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="4.75"
            android:background="@drawable/course_launch_bg"
            android:gravity="center"
            android:text="" />
    </LinearLayout>

</RelativeLayout>